--- a/commands/apply/index.html
+++ b/commands/apply/index.html
@@ -764,9 +764,8 @@
                   <h1>Command: apply</h1>
                 
                 <p>The <code class="codehilite">stein apply</code> command is used to execute a policy locally for development purposes.</p>
-<div class="codehilite"><pre><span></span><span class="n">Usage</span><span class="o">:</span> <span class="n">stein</span> <span class="n">apply</span> <span class="o">[</span><span class="n">options</span><span class="o">]</span> <span class="n">POLICY</span>
-</pre></div>
-
+<div class="codehilite"><pre><span></span><code><span class="k">Usage</span><span class="err">:</span><span class="w"> </span><span class="n">stein</span><span class="w"> </span><span class="n">apply</span><span class="w"> </span><span class="o">[</span><span class="n">options</span><span class="o">]</span><span class="w"> </span><span class="n">POLICY</span><span class="w"></span>
+</code></pre></div>
 <p>This command executes the policy file at the path specified by POLICY.</p>
 <p>The output will indicate whether the policy passed or failed. The exit code also reflects the status of the policy: 0 is pass, 1 is fail, 2 is undefined (fail, but because the result was undefined), and 2 is a runtime error.</p>
 <p>A configuration file can be specified with <code class="codehilite">-policy</code> to define available import plugins, mock data, and global values. This is used to simulate a policy embedded within an application. The documentation for this configuration file is below.</p>
